force-app/main/default/objects/Referral_Source__c/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <description>How was tis facility sourced? This is semantically similar to the standard Account Source field on the Account object.</description>
    <label>Account Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>