force-app/main/default/objects/Referral_Source__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral Sources (Contact ID)</relationshipLabel>
    <relationshipName>Referral_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>