force-app/main/default/objects/Referral_Source__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral Sources</relationshipLabel>
    <relationshipName>Referral_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>