force-app/main/default/objects/Referral_Source__c/fields/Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Email__c</fullName>
    <label>Contact Person Email</label>
    <length>43</length>
    <type>Text</type>
</CustomField>