force-app/main/default/objects/Referral_Source__c/fields/Contact_Person_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Fax_Number__c</fullName>
    <label>Contact Person Fax Number</label>
    <type>Phone</type>
</CustomField>