force-app/main/default/objects/Referral_Source__c/fields/Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone__c</fullName>
    <label>Contact Person Phone</label>
    <type>Phone</type>
</CustomField>