force-app/main/default/objects/Referral_Source__c/fields/Contact_s_Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Original_Name__c</fullName>
    <label>Contact&apos;s Original Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>