force-app/main/default/objects/Referral_Source__c/fields/Data_com_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Key__c</fullName>
    <label>Data.com Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>