force-app/main/default/objects/Referral_Source__c/fields/Date_of_Most_Recent_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Referral__c</fullName>
    <label>Date of Most Recent Referral</label>
    <type>Date</type>
</CustomField>