force-app/main/default/objects/Referral_Source__c/fields/Jigsaw_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw_Company_ID__c</fullName>
    <label>Jigsaw Company ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>