force-app/main/default/objects/Referral_Source__c/fields/Marketers_from_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Marketers_from_Referrals__c</fullName>
    <label>Marketers from Referrals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>