force-app/main/default/objects/Referral_Source__c/fields/Names_of_Marketer_s_from_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Marketer_s_from_Referrals__c</fullName>
    <label>Names of Marketer(s) from Referrals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>