force-app/main/default/objects/Referral_Source__c/fields/Number_of_Accepted_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accepted_Referrals__c</fullName>
    <label>Number of Accepted Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>