force-app/main/default/objects/Referral_Source__c/fields/Number_of_Activities_Last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities_Last_30_days__c</fullName>
    <label>Number of Activities - Last 30 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>