force-app/main/default/objects/Referral_Source__c/fields/Number_of_Referrals_Since_3_1__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Referrals_Since_3_1__c</fullName>
    <label>Number of Referrals Since 3/1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>