force-app/main/default/objects/Referral_Source__c/fields/Number_of_Referrals_Total__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Referrals_Total__c</fullName>
    <label>Number of Referrals - Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>