force-app/main/default/objects/Referral_Source__c/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <label>Province/State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>