force-app/main/default/objects/Referral_Source__c/fields/Referral_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Description__c</fullName>
    <label>Referral Source Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>