force-app/main/default/objects/Referral_Source__c/fields/Referral_Source_Fax__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Fax__c</fullName>
    <label>Referral Source Fax</label>
    <type>Phone</type>
</CustomField>