force-app/main/default/objects/Referral_Source__c/fields/Referral_Source_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Phone__c</fullName>
    <description>The work phone number of this facility</description>
    <label>Referral Source Phone</label>
    <type>Phone</type>
</CustomField>