force-app/main/default/objects/Referral_Source__c/fields/Referral_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Type__c</fullName>
    <description>The type of facility the referral source can be categorized under</description>
    <label>Referral Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>CHHA</fullName>
            </value>
            <value>
                <fullName>MLTC/MCO</fullName>
            </value>
            <value>
                <fullName>Current Patient</fullName>
            </value>
            <value>
                <fullName>LHCSA</fullName>
            </value>
            <value>
                <fullName>Health Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>