force-app/main/default/objects/Referral_Source__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>Street name</inlineHelpText>
    <label>Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>