force-app/main/default/objects/Referral_Source__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Referral Source&apos;s Zip or Postal Code</description>
    <label>Zip/Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>