force-app/main/default/objects/Referral_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>Referral_Source_Type__c</columns>
    <columns>Referral_Source_Description__c</columns>
    <columns>Total_Expenses__c</columns>
    <columns>Number_of_Accepted_Referrals__c</columns>
    <columns>Number_of_Activities_Last_30_days__c</columns>
    <columns>Number_of_Referrals_Total__c</columns>
    <columns>Number_of_Referrals_Since_3_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>